Fix: WhatsApp message link and background image added

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     body {
       margin: 0;
       padding: 0;
-      background: radial-gradient(circle at top left, #ffe6f0, #ffb3c6);
+      background: url('9df8082a.jpg') center center fixed;
+      background-size: cover;
       font-family: 'Roboto', sans-serif;
       display: flex;
       justify-content: center;
@@ -19,7 +20,7 @@
     }
 
     .love-card {
-      background: white;
+      background: rgba(255, 255, 255, 0.95);
       width: 370px;
       padding: 30px;
       border-radius: 20px;
@@ -28,18 +29,6 @@
       position: relative;
       overflow: hidden;
       animation: fadeIn 1.5s ease;
-    }
-
-    .love-card::before {
-      content: "";
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      background: url('https://i.imgur.com/mVaF05Y.png');
-      background-size: cover;
-      opacity: 0.05;
-      top: 0;
-      left: 0;
     }
 
     .heart-emoji {
@@ -95,6 +84,22 @@
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     }
 
+    button {
+      margin-top: 10px;
+      padding: 10px 20px;
+      font-size: 14px;
+      background-color: #ff4d6d;
+      color: white;
+      border: none;
+      border-radius: 10px;
+      cursor: pointer;
+      transition: background 0.3s;
+    }
+
+    button:hover {
+      background-color: #e8435e;
+    }
+
     @keyframes heartbeat {
       0% { transform: scale(1); }
       50% { transform: scale(1.2); }
@@ -119,14 +124,30 @@
       You are my sunshine, my peace, my everything.
     </div>
     <div class="custom-message" id="customText">Forever Yours, Priyanshu 💌</div>
-    <input type="text" placeholder="Write your message..." oninput="updateCardMessage(this.value)" />
+    <input type="text" id="whatsappInput" placeholder="Write your message..." />
+    <button onclick="sendWhatsApp()">Send to Priyanshu 💬</button>
   </div>
 
   <script>
-    function updateCardMessage(value) {
-      const msg = value.trim() || 'Forever Yours, Priyanshu 💌';
-      document.getElementById('customText').innerText = msg;
+     function sendWhatsApp() {
+    const input = document.getElementById('whatsappInput');
+    const message = input.value.trim();
+
+    if (!message) {
+      alert('Please type a message.');
+      return;
     }
+
+    // Replace this with your actual WhatsApp number in international format
+    const phoneNumber = '917007293169';
+    const encodedMessage = encodeURIComponent(message);
+    const whatsappURL = `https://wa.me/${phoneNumber}?text=${encodedMessage}`;
+
+    window.open(whatsappURL, '_blank');
+
+    // Update card message visually
+    document.getElementById('customText').innerText = message;
+  }
   </script>
 </body>
 </html>
